@@ -1,5 +1,5 @@
-.\"Text automatically generated by txt2man
-.TH TURN 1 "27 July 2013" "" ""
+.\" Text automatically generated by txt2man
+.TH TURN 1 "30 July 2013" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -324,13 +324,22 @@ The same \fBip\fP(s) can be used as both listening and relay \fBip\fP(s).
 \fB\-p\fP, \fB\-\-listening\-port\fP
 TURN listener port for UDP and TCP listeners (Default: 3478).
 Note: actually, TLS & DTLS sessions can connect to the "plain" TCP & UDP
+.RS
+.TP
+.B
 \fBport\fP(s), too \- if allowed by configuration.
+.RE
 .TP
 .B
 \fB\-\-tls\-listening\-port\fP
 TURN listener port for TLS and DTLS listeners (Default: 5349).
 Note: actually, "plain" TCP & UDP sessions can connect to the TLS & DTLS
-\fBport\fP(s), too \- if allowed by configuration.
+\fBport\fP(s), too \- if allowed by configuration. The TURN server 
+"automatically" recognizes the type of traffic. Actually, two listening
+endpoints (the "plain" one and the "tls" one) are equivalent in terms of
+functionality; but we keep both endpoints to satisfy the RFC 5766 specs.
+For secure TCP connections, we currently support SSL version 3 and 
+TLS version 1.0. For secure UDP connections, we support DTLS version 1.
 .TP
 .B
 \fB\-\-alt\-listening\-port\fP
